exports[`StorageUnitReducer DELETE: fail action 1`] = `
Object {
  "error": [Error: DELETE has error.],
  "loaded": false,
  "loading": false,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer DELETE: initial action 1`] = `
Object {
  "loading": true,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer DELETE: no action 1`] = `
Object {
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer DELETE: success action 1`] = `
Object {
  "data": Array [],
  "loaded": true,
  "loading": false,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_ONE: fail action 1`] = `
Object {
  "root": Object {
    "data": Object {},
    "error": [Error: LOAD_ONE: has error.],
    "loaded": false,
    "loading": false
  }
}
`;

exports[`StorageUnitReducer LOAD_ONE: initial action 1`] = `
Object {
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_ONE: no action 1`] = `
Object {
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_ONE: success action 1`] = `
Object {
  "root": Object {
    "data": Object {
      "area": undefined,
      "areaTo": undefined,
      "breadcrumb": Array [],
      "environmentAssessment": Object {},
      "environmentRequirement": Object {},
      "height": undefined,
      "heightTo": undefined,
      "securityAssessment": Object {},
      "someField": 1
    },
    "loaded": true,
    "loading": false
  }
}
`;

exports[`StorageUnitReducer LOAD_SEVERAL child: fail action 1`] = `
Object {
  "error": [Error: LOAD_SEVERAL child has error.],
  "loaded": false,
  "loading": false,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_SEVERAL child: initial action 1`] = `
Object {
  "loading": true,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_SEVERAL child: no action 1`] = `
Object {
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_SEVERAL child: success action 1`] = `
Object {
  "data": Object {
    "someField": 1
  },
  "loaded": true,
  "loading": false,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_SEVERAL: fail action 1`] = `
Object {
  "error": [Error: LOAD_SEVERAL has error.],
  "loaded": false,
  "loading": false,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_SEVERAL: initial action 1`] = `
Object {
  "loading": true,
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_SEVERAL: no action 1`] = `
Object {
  "root": Object {
    "data": Object {}
  }
}
`;

exports[`StorageUnitReducer LOAD_SEVERAL: success action 1`] = `
Object {
  "data": Object {
    "someField": 1
  },
  "loaded": true,
  "loading": false,
  "root": Object {
    "data": Object {}
  }
}
`;
